@@ -23,6 +23,8 @@
 
 # Process this file with automake to produce Makefile.in.
 
+AUTOMAKE_OPTIONS = 1.11 color-tests parallel-tests foreign
+
 LIBTIFF = $(top_builddir)/libtiff/libtiff.la
 
 #EXTRA_DIST = Makefile.vc
